@@ -1,3 +1,5 @@
+05Jul01=======================================================================
+1. disconnect channels whose route node has disappeared
 29Jun01=======================================================================
 1. fix merge command
 28Jun01=======================================================================
